test_debug_logs.txt
============================= test session starts ==============================
platform linux -- Python 3.12.5, pytest-8.4.0, pluggy-1.6.0
rootdir: /home/chase/Projects/wove
configfile: setup.cfg
plugins: cov-6.2.1, anyio-4.9.0, asyncio-1.1.0, django-4.11.1
asyncio: mode=Mode.AUTO, asyncio_default_fixture_loop_scope=None, asyncio_default_test_loop_scope=function
collected 0 items / 4 errors

==================================== ERRORS ====================================
_____________________ ERROR collecting tests/test_core.py ______________________
../../.pyenv/versions/deus-stulti/lib/python3.12/site-packages/_pytest/python.py:497: in importtestmodule
    mod = import_path(
../../.pyenv/versions/deus-stulti/lib/python3.12/site-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
../../.pyenv/versions/3.12.5/lib/python3.12/importlib/__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
../../.pyenv/versions/deus-stulti/lib/python3.12/site-packages/_pytest/assertion/rewrite.py:186: in exec_module
    exec(co, module.__dict__)
tests/test_core.py:4: in <module>
    from wove import weave
wove/__init__.py:9: in <module>
    from .context import WoveContextManager
E     File "/home/chase/Projects/wove/wove/context.py", line 6
E       from typing (
E                   ^
E   SyntaxError: invalid syntax
_____________________ ERROR collecting tests/test_debug.py _____________________
../../.pyenv/versions/deus-stulti/lib/python3.12/site-packages/_pytest/python.py:497: in importtestmodule
    mod = import_path(
../../.pyenv/versions/deus-stulti/lib/python3.12/site-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
../../.pyenv/versions/3.12.5/lib/python3.12/importlib/__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
../../.pyenv/versions/deus-stulti/lib/python3.12/site-packages/_pytest/assertion/rewrite.py:186: in exec_module
    exec(co, module.__dict__)
tests/test_debug.py:5: in <module>
    from wove import weave
wove/__init__.py:9: in <module>
    from .context import WoveContextManager
E     File "/home/chase/Projects/wove/wove/context.py", line 6
E       from typing (
E                   ^
E   SyntaxError: invalid syntax
____________________ ERROR collecting tests/test_mapping.py ____________________
../../.pyenv/versions/deus-stulti/lib/python3.12/site-packages/_pytest/python.py:497: in importtestmodule
    mod = import_path(
../../.pyenv/versions/deus-stulti/lib/python3.12/site-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
../../.pyenv/versions/3.12.5/lib/python3.12/importlib/__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
../../.pyenv/versions/deus-stulti/lib/python3.12/site-packages/_pytest/assertion/rewrite.py:186: in exec_module
    exec(co, module.__dict__)
tests/test_mapping.py:4: in <module>
    from wove import weave
wove/__init__.py:9: in <module>
    from .context import WoveContextManager
E     File "/home/chase/Projects/wove/wove/context.py", line 6
E       from typing (
E                   ^
E   SyntaxError: invalid syntax
_____________________ ERROR collecting tests/test_merge.py _____________________
../../.pyenv/versions/deus-stulti/lib/python3.12/site-packages/_pytest/python.py:497: in importtestmodule
    mod = import_path(
../../.pyenv/versions/deus-stulti/lib/python3.12/site-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
../../.pyenv/versions/3.12.5/lib/python3.12/importlib/__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
../../.pyenv/versions/deus-stulti/lib/python3.12/site-packages/_pytest/assertion/rewrite.py:186: in exec_module
    exec(co, module.__dict__)
tests/test_merge.py:5: in <module>
    from wove import weave, merge
wove/__init__.py:9: in <module>
    from .context import WoveContextManager
E     File "/home/chase/Projects/wove/wove/context.py", line 6
E       from typing (
E                   ^
E   SyntaxError: invalid syntax
=========================== short test summary info ============================
ERROR tests/test_core.py
ERROR tests/test_debug.py
ERROR tests/test_mapping.py
ERROR tests/test_merge.py
!!!!!!!!!!!!!!!!!!! Interrupted: 4 errors during collection !!!!!!!!!!!!!!!!!!!!
============================== 4 errors in 0.22s ===============================
